# ladybug-rag-rs

./: .gitmodules  Cargo.toml  README.md
article/: finding_what_matters.md
article/diagrams/: five_stage_pipeline.mmd  icebug_algorithms.mmd  information_overload.mmd  ladybugdb_stack.mmd  louvain_topics.mmd  pagerank_signal_noise.mmd  scaling_curve.mmd  vector_vs_graph.mmd
crates/icebug/: Cargo.toml
crates/icebug-sys/: Cargo.toml  build.rs
crates/icebug-sys/src/: lib.rs
crates/icebug-sys/wrapper/: CMakeLists.txt  icebug_c.cpp  icebug_c.h
crates/icebug/src/: bfs.rs  graph.rs  lib.rs  louvain.rs  pagerank.rs
crates/icebug/tests/: integration_test.rs
crates/ladybug-rag/: Cargo.toml
crates/ladybug-rag/examples/: demo.rs  onnx_demo.rs
crates/ladybug-rag/examples/data/: graph_algorithms.txt  rust_overview.txt
crates/ladybug-rag/src/: chunker.rs  embeddings.rs  entities.rs  graph_store.rs  lib.rs  onnx_embedder.rs  rag.rs  types.rs  vector_store.rs
crates/ladybug-rag/tests/: integration_test.rs
diagrams/: 01_architecture_overview.mmd  02_pagerank.mmd  03_louvain_communities.mmd  04_bfs_expansion.mmd  05_rrf_fusion.mmd  06_ingestion_pipeline.mmd  07_graph_schema.mmd  08_crate_architecture.mmd
notebooks/: hybrid_graph_rag_article.ipynb
