[package]
name = "ladybug-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hybrid Graph RAG engine combining vector search, PageRank, and Louvain community detection"

[dependencies]
icebug = { path = "../icebug" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
